appId: com.casadosaber.digital
---
- runFlow: subflows/login.yaml
- repeat:
    while:
      notVisible: Categorias
    commands:
      - back
- tapOn: Minha conta
- assertVisible: "Programa de Indicações "
- assertVisible: "Senha: ****"
- tapOn: Certificados
- assertVisible: Meus certificados
- tapOn: Categorias
- assertVisible: MEUS DOWNLOADS
- assertVisible:
    text: +PSICANÁLISE
    index: 0
- tapOn: Início
- assertVisible: ASSISTIR
- tapOn:
    point: 50%,40%
- assertVisible: Baixar
- back